samples/_failures_safe/1761289436_e887ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b17e8a84.c: In function ‘main’:
./samples/SAFE/__tmp_b17e8a84.c:176:5: error: expected expression at end of input
  176 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_b17e8a84.c:176:5: error: expected declaration or statement at end of input
